# openai-basics

./: .gitignore  README.md  agent_calculator.py  chatbot.py  data.txt  embeddings.py  hybrid_embeddings.py  main.py  multimodal_rag.py  pyproject.toml  rag_text.py  structured_output.py
